--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://dzenetahamzabegovic.github.io/"
 languageCode = "en-us"
 theme = "hugo-winston-theme"
 themesDir = "themes"
-title = "Mon site labveiltech"
+title = "La veille technologique de Dzeneta Hamzabegovic"
 
 paginate = 3
 pygmentsCodeFences = true
